Add searchable filter to roles table
This adds a searchable filter which allows users to search on the name
of the role, the current appointee etc.

We've been asked to do this as part of our work on gift week to make
our Content Designers lives easier.

We've added some text when there's no appointment so that users can
filter for vacant appointments and clean them up, which is a common
task.

--- a/app/assets/stylesheets/admin/views/_roles.scss
+++ b/app/assets/stylesheets/admin/views/_roles.scss
@@ -1,5 +1,19 @@
-.app-view-roles__page-list {
-  .govuk-table__header:last-child {
-    width: 10%;
-  }
+.app-view-roles-index__table .govuk-table__row .govuk-table__header:nth-child(1) {
+  width: 30%;
+}
+
+.app-view-roles-index__table .govuk-table__row .govuk-table__header:nth-child(2) {
+  width: 25%;
+}
+
+.app-view-roles-index__table .govuk-table__row .govuk-table__header:nth-child(3) {
+  width: 25%;
+}
+
+.app-view-roles-index__table .govuk-table__row .govuk-table__header:nth-child(4) {
+  width: 10%;
+}
+
+.app-view-roles-index__table .govuk-table__row .govuk-table__header:nth-child(5) {
+  width: 10%;
 }
