--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -14,56 +14,60 @@
   href: new_admin_role_path,
   margin_bottom: 6,
 } %>
-<div class="app-view-roles__page-list">
-<%= render "govuk_publishing_components/components/table", {
-  head: [
-    {
-      text: "Name",
-    },
-    {
-      text: "Organisations",
-    },
-    {
-      text: "Currently appointed",
-    },
-    {
-      text: "Translations",
-    },
-    {
-      text: tag.span("Actions", class: "govuk-visually-hidden"),
-    },
-  ],
-  rows: @roles.map do |role|
-    [
+
+<div class="app-c-govuk-table--filterable govuk-table--with-actions app-view-roles-index__table">
+  <%= render "govuk_publishing_components/components/table", {
+    filterable: true,
+    label: "Filter roles",
+    head: [
       {
-        text: tag.span(role.name, class: "govuk-!-font-weight-bold"),
+        text: "Name",
       },
       {
-        text: role.organisation_names,
+        text: "Organisations",
       },
       {
-        text:
-          if role.current_person_name.eql?("No one is assigned to this role")
-            ""
-          else
-            role.current_person_name
-          end,
+        text: "Currently appointed",
       },
       {
-        text:
-          content_tag_for(:div, role) do
-            link_to(sanitize("Manage #{tag.span(role.name, class: "govuk-visually-hidden")}"), admin_role_translations_path(role), title: "Manage translations of #{role.name}", class: "govuk-link")
-          end,
+        text: "Translations",
       },
       {
-        text: link_to(sanitize("Edit #{tag.span(role.name, class: "govuk-visually-hidden")}"), edit_admin_role_path(role), title: "Edit role #{role.name}", class: "govuk-link") +
-          if role.destroyable?
-            link_to(sanitize("Delete #{tag.span(role.name, class: "govuk-visually-hidden")}"), confirm_destroy_admin_role_path(role), class: "govuk-link govuk-link--no-visited-state gem-link--destructive govuk-!-margin-left-2")
-          else
-            ""
-          end,
+        text: tag.span("Actions", class: "govuk-visually-hidden"),
       },
-    ]
-  end,
-} %>
+    ],
+    rows: @roles.map do |role|
+      [
+        {
+          text: tag.span(role.name, class: "govuk-!-font-weight-bold"),
+        },
+        {
+          text: role.organisation_names,
+        },
+        {
+          text:
+            if role.current_person_name.eql?("No one is assigned to this role")
+              tag.span("Vacant", class: "govuk-!-font-weight-bold")
+            else
+              role.current_person_name
+            end,
+
+        },
+        {
+          text:
+            content_tag_for(:div, role) do
+              link_to(sanitize("Manage #{tag.span(role.name, class: "govuk-visually-hidden")}"), admin_role_translations_path(role), title: "Manage translations of #{role.name}", class: "govuk-link")
+            end,
+        },
+        {
+          text: link_to(sanitize("Edit #{tag.span(role.name, class: "govuk-visually-hidden")}"), edit_admin_role_path(role), title: "Edit role #{role.name}", class: "govuk-link") +
+            if role.destroyable?
+              link_to(sanitize("Delete #{tag.span(role.name, class: "govuk-visually-hidden")}"), confirm_destroy_admin_role_path(role), class: "govuk-link govuk-link--no-visited-state gem-link--destructive govuk-!-margin-left-2")
+            else
+              ""
+            end,
+        },
+      ]
+    end,
+  } %>
 </div>
