Add new link to footer for the GOVUK Status page

--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -92,6 +92,10 @@
             href: "https://www.gov.uk/government/content-publishing",
             text: "How to write, publish, and improve content",
           },
+          {
+            href: "https://status.publishing.service.gov.uk/",
+            text: "Check if publishing apps are working or if there’s any maintenance planned",
+          },
         ],
       },
     ],
