Update reorder role page to use person name as description
There are some duplicate role names which are really hard to reorder as you
can't tell which person is currently assigned to which.

This adds the roles current appointee to each role. I've split out the
ministerial dept reordering into it's own partial as it's divergent enough
that adding more conditional logic into their partial probably isn't great.

--- a/app/views/admin/cabinet_ministers/_reorder.html.erb
+++ b/app/views/admin/cabinet_ministers/_reorder.html.erb
@@ -10,10 +10,11 @@
 
       <%= render "govuk_publishing_components/components/reorderable_list", {
         input_name: name,
-        items: list.map do |item|
+        items: roles.map do |role|
           {
-            id: item.id,
-            title: item.name,
+            id: role.id,
+            title: role.name,
+            description: role.current_person&.name,
           }
         end,
       } %>
