--- a/app/views/admin/cabinet_ministers/reorder_whip_roles.html.erb
+++ b/app/views/admin/cabinet_ministers/reorder_whip_roles.html.erb
@@ -2,7 +2,7 @@
 <% content_for :context, "Whips ordering" %>
 
 <%= render "reorder",
-  list: @roles,
+  roles: @roles,
   form_url: order_cabinet_minister_roles_admin_cabinet_ministers_path,
   cancel_path: admin_cabinet_ministers_path(anchor: "whips"),
   name: "ministerial_roles[ordering]" %>
