--- a/app/views/admin/cabinet_ministers/reorder_also_attends_cabinet_roles.html.erb
+++ b/app/views/admin/cabinet_ministers/reorder_also_attends_cabinet_roles.html.erb
@@ -2,7 +2,7 @@
 <% content_for :context, "Also attends cabinet ordering" %>
 
 <%= render "reorder",
-  list: @roles,
+  roles: @roles,
   form_url: order_also_attends_cabinet_roles_admin_cabinet_ministers_path,
   cancel_path: admin_cabinet_ministers_path(anchor: "also_attends_cabinet"),
   name: "ministerial_roles[ordering]" %>
