Fix datetime_fields component
- component guide was not rendering because not all examples included enough data for the component to render
- specifically, the components gem component date_input will only render custom day/month/year inputs if the data passed includes either a name or a label (and ideally a width)
- also modified the component so by default it doesn't try to pass [{}, {}, {}] as the items to the date_input
- also removing the documentation entry for start_year/end_year as it isn't in use and doesn't appear to do anything

--- a/app/views/components/_datetime_fields.html.erb
+++ b/app/views/components/_datetime_fields.html.erb
@@ -16,11 +16,14 @@
   time_hint = time_hint ||= nil
   time_hint_id = "time-hint-#{SecureRandom.hex(4)}"
 
-  year ||= {}
-
-  month ||= {}
-
-  day ||= {}
+  year ||= nil
+  month ||= nil
+  day ||= nil
+  date_input_items = []
+  date_input_items << year if year
+  date_input_items << month if month
+  date_input_items << day if day
+  date_input_items = nil unless date_input_items.any?
 
   hour ||= {}
   hour_value = hour[:value]
@@ -51,7 +54,7 @@
     id: date_id,
     hint: date_hint,
     error_items: error_items,
-    items: [day, month, year],
+    items: date_input_items,
   } %>
 
   <% unless date_only %>
