Add test for govspeak_editor component
- includes a bug fix, previously if the component was passed data attributes that included a module, this would result in no `data-module` being applied to the component at all (it's supposed to have some by default). This was caused by the use of `.strip!` instead of `.strip`
- also update the component documentation to include some previously undocumented features

--- a/app/views/components/_govspeak_editor.html.erb
+++ b/app/views/components/_govspeak_editor.html.erb
@@ -18,12 +18,12 @@
   data_attributes ||= {}
   data_attributes[:module] ||= ""
   data_attributes[:module] << " govspeak-editor"
-  data_attributes[:module] = data_attributes[:module].strip!
+  data_attributes[:module] = data_attributes[:module].strip
 
   textarea_data_attributes ||= {}
   textarea_data_attributes[:module] ||= ""
   textarea_data_attributes[:module] << " paste-html-to-govspeak"
-  textarea_data_attributes[:module] = textarea_data_attributes[:module].strip!
+  textarea_data_attributes[:module] = textarea_data_attributes[:module].strip
 
   preview_button_data_attributes ||= {}
   preview_button_data_attributes["content-target"] = "##{id}"
