Add feature flag for visual editor
Add flipflop feature flag for visual editor and use it to display a visual editor button on the govspeak editor on the edition edit page.

--- a/app/assets/stylesheets/components/_govspeak-editor.scss
+++ b/app/assets/stylesheets/components/_govspeak-editor.scss
@@ -20,6 +20,7 @@
 
 .app-c-govspeak-editor__preview,
 .app-c-govspeak-editor__error,
+.js-app-c-govspeak-editor__visual-editor-button,
 .js-app-c-govspeak-editor__preview-button,
 .js-app-c-govspeak-editor__back-button {
   display: none;
@@ -27,6 +28,7 @@
 
 .app-c-govspeak-editor__preview--show,
 .app-c-govspeak-editor__error--show,
+.app-c-govspeak-editor__visual-editor-button--show,
 .app-c-govspeak-editor__preview-button--show,
 .app-c-govspeak-editor__back-button--show {
   display: block;
