Use minimal table for document corporate information pages
We want a list of corporate information pages related to a document, but
without the pagination and extra detail.

This moves the table itself into a partial and uses this for document corporate
information pages.

--- a/app/views/admin/editions/show/_main.html.erb
+++ b/app/views/admin/editions/show/_main.html.erb
@@ -174,8 +174,11 @@
                       class: "govuk-link") %>
         </p>
       <% end %>
-
-      <%= render "admin/editions/search_results", filter: @filter, paginator: @paginator, show_export: false %>
+      <% if @edition.corporate_information_pages.any? %>
+        <%= render "admin/editions/search_results_table", filter: @filter %>
+      <% else %>
+        <p class="govuk-body">No corporate information pages for this document</p>
+      <% end %>
     </section>
   <% end %>
 
