--- a/app/views/admin/editions/_search_results.html.erb
+++ b/app/views/admin/editions/_search_results.html.erb
@@ -9,44 +9,7 @@
 <% if filter.editions.blank? %>
   <p class="govuk-body app-view-edition-search-results__no_documents">No documents found</p>
 <% else %>
-  <div class="govuk-table--with-actions">
-    <%= render "govuk_publishing_components/components/table", {
-      head: [
-        {
-          text: "Title",
-        },
-        {
-          text: "Updated by",
-        },
-        {
-          text: "State",
-        },
-        {
-          text: tag.span("View", class: "govuk-visually-hidden"),
-        },
-      ],
-      rows:
-        filter.editions.map do |edition|
-          [
-            {
-              text: tag.span(index_table_title_row(edition), class: "govuk-!-font-weight-bold"),
-            },
-            {
-              text: tag.p("#{time_ago_in_words edition.updated_at} ago", class: "govuk-!-margin-0") +
-                "by " +
-                linked_author(edition.last_author, class: "govuk-link"),
-            },
-            {
-              text: render(Admin::Editions::TagsComponent.new(edition)),
-            },
-            {
-              text: search_results_table_actions(edition),
-            },
-          ]
-        end,
-      first_cell_is_header: true,
-    } %>
-  </div>
+  <%= render "admin/editions/search_results_table", filter: @filter %>
 
   <% if paginate(paginator, theme: "govuk_paginator").present? && show_export && can?(:export, Edition) %>
     <div class="govuk-grid-row">
