Make the CIP pages work for editionable worldwide organisations
This modifies the existing corporate information controller and model so that
they are compatible with editionable worldwide organisations as well as legacy
worldwide organisations.

The owning organisation of a CIP must be an editionable worldwide organisation
and is used for the base path of the CIP, we fetch the live edition if
available, or the most recent version otherwise.

Note: When the editionable worldwide organisations feature flag is enabled,
performing actions related to the corporate information pages of legacy
worldwide organisations will not function (and vice versa). This should be okay
as we don't want these features running side-by-side. The feature flag hides
the legacy worldwide organisations for an extra level of safety.

--- a/app/views/admin/editions/show/_main.html.erb
+++ b/app/views/admin/editions/show/_main.html.erb
@@ -158,6 +158,27 @@
     </section>
   <% end %>
 
+  <% if @edition.has_corporate_information_pages? %>
+    <section class="app-view-summary__section app-view-summary__section--corporate-information-pages">
+      <%= render "govuk_publishing_components/components/heading", {
+        text: "Corporate information pages",
+        heading_level: 2,
+        font_size: "l",
+        margin_bottom: 3,
+      } %>
+
+      <% if @edition.unused_corporate_information_page_types.any? %>
+        <p class="govuk-body">
+          <%= link_to("Add corporate information page",
+                      new_admin_editionable_worldwide_organisation_corporate_information_page_path(@edition.id),
+                      class: "govuk-link") %>
+        </p>
+      <% end %>
+
+      <%= render "admin/editions/search_results", filter: @filter, paginator: @paginator, show_export: false %>
+    </section>
+  <% end %>
+
   <% if @edition.allows_image_attachments? %>
     <section class="app-view-summary__section app-view-summary__section--attachments">
       <%= render "govuk_publishing_components/components/heading", {
