--- a/app/views/admin/attachments/_form.html.erb
+++ b/app/views/admin/attachments/_form.html.erb
@@ -42,7 +42,7 @@
       </div>
 
       <div class="govuk-!-margin-bottom-8 app-view-attachments__form-body js-locale-switcher-field">
-        <% if Flipflop.govspeak_visual_editor? && current_user.can_see_visual_editor_private_beta? %>
+        <% if Flipflop.govspeak_visual_editor? && current_user.can_see_visual_editor_private_beta? && form.object.visual_editor %>
           <%= render "components/visual_editor", {
             label: {
               text: "Body (required)",
@@ -58,7 +58,7 @@
               image_ids: @edition && @edition.images.any? ? @edition.images.map { |img| img[:id] } : [],
               attachment_ids: [], # HTML attachments cannot embed Attachments from their parent Edition
             },
-            hidden_field_name: nil,
+            hidden_field_name: "attachment[visual_editor]",
           } %>
         <% else %>
         <%= render "components/govspeak_editor", {
@@ -77,6 +77,7 @@
             attachment_ids: [], # HTML attachments cannot embed Attachments from their parent Edition
           },
         } %>
+          <%= hidden_field_tag "attachment[visual_editor]", false %>
           <% end %>
       </div>
 
