Spike: approach for storing republishing actions
This is a very basic proof of concept for how we might want to record
the number of republishings that have happened in Whitehall, with a
reason as to why this has happened.

--- a/app/views/admin/republishing/confirm_page.html.erb
+++ b/app/views/admin/republishing/confirm_page.html.erb
@@ -9,10 +9,19 @@
     </p>
     <%= form_with(url: @republishing_path, method: :post, data: {
         module: "prevent-multiple-form-submissions",
-      }) do
-        render("govuk_publishing_components/components/button", {
+      }) do %>
+        <%= render("govuk_publishing_components/components/textarea", {
+          label: {
+            text: "What is the reason for republishing this page?",
+            heading_size: "m",
+          },
+          name: "reason",
+          id: "reason",
+        }) %>
+
+        <%= render("govuk_publishing_components/components/button", {
           text: "Confirm republishing",
-        })
-      end %>
+        }) %>
+   <% end %>
   </section>
 </div>
