--- a/app/views/admin/republishing/confirm_page.html.erb
+++ b/app/views/admin/republishing/confirm_page.html.erb
@@ -1,6 +1,7 @@
 <% content_for :page_title, "Republish '#{@title}'" %>
 <% content_for :title, "Are you sure you want to republish '#{@title}'?" %>
 <% content_for :title_margin_bottom, 6 %>
+<% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @republishing_event)) %>
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
@@ -9,10 +10,20 @@
     </p>
     <%= form_with(url: @republishing_path, method: :post, data: {
         module: "prevent-multiple-form-submissions",
-      }) do
-        render("govuk_publishing_components/components/button", {
+      }) do %>
+        <%= render("govuk_publishing_components/components/textarea", {
+          label: {
+            text: "What is the reason for republishing?",
+            heading_size: "m",
+          },
+          name: "reason",
+          id: "republishing_event_reason",
+          error_items: errors_for(@republishing_event.errors, :reason),
+        }) %>
+
+        <%= render("govuk_publishing_components/components/button", {
           text: "Confirm republishing",
-        })
-      end %>
+        }) %>
+   <% end %>
   </section>
 </div>
