--- a/app/views/admin/republishing/confirm_page.html.erb
+++ b/app/views/admin/republishing/confirm_page.html.erb
@@ -8,22 +8,6 @@
     <p class="govuk-body govuk-!-margin-bottom-7">
       This will schedule the page to be republished.
     </p>
-    <%= form_with(url: @republishing_path, method: :post, data: {
-        module: "prevent-multiple-form-submissions",
-      }) do %>
-        <%= render("govuk_publishing_components/components/textarea", {
-          label: {
-            text: "What is the reason for republishing?",
-            heading_size: "m",
-          },
-          name: "reason",
-          id: "republishing_event_reason",
-          error_items: errors_for(@republishing_event.errors, :reason),
-        }) %>
-
-        <%= render("govuk_publishing_components/components/button", {
-          text: "Confirm republishing",
-        }) %>
-   <% end %>
+    <%= render "form", republishing_url: @republishing_path %>
   </section>
 </div>
