--- a/app/views/admin/republishing/confirm_organisation.html.erb
+++ b/app/views/admin/republishing/confirm_organisation.html.erb
@@ -1,18 +1,13 @@
 <% content_for :page_title, "Republish '#{@organisation.name}'" %>
 <% content_for :title, "Are you sure you want to republish '#{@organisation.name}'?" %>
 <% content_for :title_margin_bottom, 6 %>
+<% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @republishing_event)) %>
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
     <p class="govuk-body govuk-!-margin-bottom-7">
       This will republish the organisation <%= link_to @organisation.name, @organisation.public_url, { class: "govuk-link" } %>.
     </p>
-    <%= form_with(url: admin_republishing_organisation_republish_path(@organisation.slug), method: :post, data: {
-        module: "prevent-multiple-form-submissions",
-      }) do
-        render("govuk_publishing_components/components/button", {
-          text: "Confirm republishing",
-        })
-      end %>
+    <%= render "form", republishing_url: admin_republishing_organisation_republish_path(@organisation.slug) %>
   </section>
 </div>
