--- a/app/views/admin/republishing/confirm_document.html.erb
+++ b/app/views/admin/republishing/confirm_document.html.erb
@@ -1,6 +1,7 @@
 <% content_for :page_title, "Republish '#{@document.slug}'" %>
 <% content_for :title, "Are you sure you want to republish '#{@document.slug}'?" %>
 <% content_for :title_margin_bottom, 6 %>
+<% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @republishing_event)) %>
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
@@ -29,13 +30,6 @@
           ]
         end,
     } %>
-
-    <%= form_with(url: admin_republishing_document_republish_path(@document.slug), method: :post, data: {
-        module: "prevent-multiple-form-submissions",
-      }) do
-        render("govuk_publishing_components/components/button", {
-          text: "Confirm republishing",
-        })
-      end %>
+    <%= render "form", republishing_url: admin_republishing_document_republish_path(@document.slug) %>
   </section>
 </div>
