Hide markdown help when visual editor is showing
Since users will not be using markdown when the visual editor is
showing, we can hide it.

--- a/app/assets/stylesheets/components/_visual-editor.scss
+++ b/app/assets/stylesheets/components/_visual-editor.scss
@@ -2,7 +2,8 @@
 
 .app-c-visual-editor__content,
 .app-c-visual-editor__visual-editor-wrapper,
-.app-c-visual-editor__govspeak-editor-wrapper--hidden {
+.app-c-visual-editor__govspeak-editor-wrapper--hidden,
+.app-c-visual-editor__markdown-help--hidden {
   display: none;
 }
 
