--- a/app/views/admin/republishing/confirm_role.html.erb
+++ b/app/views/admin/republishing/confirm_role.html.erb
@@ -12,6 +12,6 @@
         This will republish the role '<%= @role.name %>'.
       <% end %>
     </p>
-    <%= render "form", republishing_url: admin_republishing_role_republish_path(@role.slug) %>
+    <%= render partial: "shared/republishing_form", locals: { republishing_url: admin_republishing_role_republish_path(@role.slug) } %>
   </section>
 </div>
